(1) fix bug that caused lists to not be aligned properly. (2) update footer for About Us

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,11 +109,11 @@ header {
 
 /* Target hyperlinks within the navbar */
 .flexbox-navbar-text li a{
-    transition: all 0.3s ease 0s;
+    transition: all 0.8s ease 0s;
 }
 .flexbox-navbar-text li a:hover{
     color:#72A6E8;
-    font-size: 17px;
+    font-size: 16.5px;
 }
 
 
@@ -126,6 +126,10 @@ header {
     flex-direction: column;
     padding: 10px 15%;   /* First value: padding top and bottom. Second value: padding on sides. */
     margin-right: auto;
+}
+
+.flexbox-main-content-lists {
+    padding: 0px 2%; 
 }
 
 /* Container that stores the YouTube video */
